# nyc-taxi-mlops

./: .dockerignore  Dockerfile  LICENSE  Makefile  README.md  app.py  data_models.py  dvc.yaml  params.yaml  plot_results_new.py  predict_model_new.py  pyproject.toml  requirements.txt  requirements_dev.txt  train_model_new.py
.dvc/: config
.github/workflows/: ci-cd.yml
container_models/models/: xgbreg.joblib
container_models/transformers/: outliers.joblib  output_transformer.joblib  preprocessor.joblib
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: Untitled.ipynb  eda-nyc.ipynb
nyc_taxi_mlops/: __init__.py  dataset.py  features.py  plots.py
nyc_taxi_mlops/modeling/: predict.py  train.py
src/models/: predict_model.py  predict_model_rf.py  train_model.py  train_model_rf.py
src/visualization/: plot_results.py  plot_results_rf.py
