[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "nyc_taxi_mlops"
version = "0.0.1"
description = "ML Project to Predict Taxi Trip Duration in NYC - MLOps"
authors = [
  { name = "Vara Akella" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.11"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["nyc_taxi_mlops"]
force_sort_within_sections = true
